--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   app:
+    container_name: short-url
     image: doog/short-url:latest
     restart: on-failure
     healthcheck:
@@ -8,7 +9,7 @@ services:
       interval: 10s # 设置检测间隔
       timeout: 10s # 设置检测超时时间
       retries: 3 # 设置重试次数
-      start_period: 30s # 启动后，多少秒开始启动检测程序
+#      start_period: 30s # 启动后，多少秒开始启动检测程序
     ports:
       - 127.0.0.1:5050:3000
     environment:
